--- a/openshift/deployment.yaml
+++ b/openshift/deployment.yaml
@@ -37,6 +37,12 @@ spec:
                 secretKeyRef:
                   name: ocmui-dashboard-tokens
                   key: jira-token
+            # Phase 4: Persistent data directory for team roster
+            - name: DATA_DIR
+              value: "/data"
+          volumeMounts:
+            - name: data-volume
+              mountPath: /data
           resources:
             requests:
               memory: "128Mi"
@@ -66,3 +72,7 @@ spec:
             capabilities:
               drop:
                 - ALL
+      volumes:
+        - name: data-volume
+          persistentVolumeClaim:
+            claimName: ocmui-dashboard-data
