--- a/openshift/secrets.example.yaml
+++ b/openshift/secrets.example.yaml
@@ -8,12 +8,16 @@
 # Create a service account or use a bot account with appropriate permissions:
 # - GitHub: repo read access to openshift/console, openshift/api, etc.
 # - JIRA: Read access to your team's projects
+# - Unleash: Read-only access to feature flags
 #
 # To apply: oc apply -f secrets.yaml
 # To create from command line:
 #   oc create secret generic ocmui-dashboard-tokens \
 #     --from-literal=github-token='ghp_xxxxxxxxxxxx' \
-#     --from-literal=jira-token='your-jira-pat'
+#     --from-literal=jira-token='your-jira-pat' \
+#     --from-literal=unleash-staging-token='your-staging-api-token' \
+#     --from-literal=unleash-prod-token='your-prod-api-token' \
+#     --from-literal=dashboard-password='your-team-password'
 
 apiVersion: v1
 kind: Secret
@@ -30,3 +34,15 @@ stringData:
   # JIRA Personal Access Token
   # Generate at: https://issues.redhat.com/secure/ViewProfile.jspa -> Personal Access Tokens
   jira-token: "your_jira_pat_here"
+  
+  # Unleash API Tokens (for Feature Flags tab)
+  # Get these from your Unleash admin UI -> API Access
+  # Required: Read API access to your project
+  unleash-staging-token: "*:default.your-staging-token-here"
+  unleash-prod-token: "*:default.your-prod-token-here"
+  
+  # Dashboard Password (Basic Auth)
+  # Simple shared password for team access
+  # Username is 'ocmui' by default (configurable via DASHBOARD_USERNAME env var)
+  # If not set, dashboard is publicly accessible
+  dashboard-password: "your-team-password-here"
