--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.89.0",
     "@vitejs/plugin-react": "^4.7.0",
     "concurrently": "^8.2.0",
+    "dotenv": "^17.2.4",
     "express": "^4.18.2",
     "express-static-gzip": "^2.1.7",
     "marked": "^4.3.0",
