Removed cluster and public routes, restored feature flag report.

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,18 @@
 
 GITHUB_TOKEN=
 JIRA_TOKEN=
+# Unleash: use personal access tokens (user:xxxx) for "last modified by" and correct strategy; or backend (*:env.xxxx) for Client API only.
 UNLEASH_STAGING_TOKEN=
 UNLEASH_PROD_TOKEN=
 
 # Optional (defaults shown)
 # PORT=3017
-# ENABLE_UNLEASH_API=true
+# ENABLE_UNLEASH_API=false   # set to disable Unleash API (e.g. when public)
+# ENABLE_BASIC_AUTH=true     # set with DASHBOARD_PASSWORD to protect public deployment
+# UNLEASH_PROJECT=default    # Unleash project id
+# UNLEASH_STAGING_ENV=       # e.g. development (default: development, staging)
+# UNLEASH_PROD_ENV=          # e.g. production (default: production, prod)
+# UNLEASH_USE_BEARER=true    # set to false to send raw token (if 401)
 # UNLEASH_STAGING_URL=https://ocm-stage.unleash.devshift.net
 # UNLEASH_PROD_URL=https://ocm.unleash.devshift.net
 # DASHBOARD_USERNAME=ocmui
